# vedas

./: .gitignore  Cargo.toml  README.md  gui.xml
examples/: Cargo.toml  asm.rs  counter.rs  select_list.rs  todo.rs
examples/showcase/: Cargo.toml  README.md  index.html  package.json
examples/showcase/src/: main.rs
examples/vedas-ui-demo/: Cargo.toml  README.md  index.css  index.html  index.scss
examples/vedas-ui-demo/src/: app.rs  main.rs
examples/vedas-ui-demo/src/page/: assets_page.rs  basic_form_page.rs  button_page.rs  card_page.rs  carousel_page.rs  dropdown_page.rs  form_pages.rs  highlighters.rs  home_page.rs  layouts_page.rs  mod.rs  modal_page.rs  navbar_page.rs  spinner_page.rs  text_page.rs
input/: ui.xml
sdk/: Cargo.toml  serve.sh  static.sh
sdk/src/: app.rs  main.rs
src/: helpers.rs  lib.rs  macros.rs  main.rs
src/helpers/: reader.rs  xml.rs
src/macros/: application.rs  column.rs  length.rs  message.rs  mtch.rs  text_input.rs
vedas-core/: Cargo.toml
vedas-core/src/: macros.rs
vedas-core/src/helpers/: reader.rs  xml.rs
vedas-core/src/macros/: alignment.rs  btn.rs  checkbox.rs  col.rs  component.rs  container.rs  divider.rs  message.rs  progress_bar.rs  row.rs  scrollable.rs  select.rs  slider.rs  space.rs  style.rs  svg.rs  text.rs
vedas-styles/: _accordion.sass  _global-variables.sass  _mixins.sass  _toast.sass  _toggle.sass  _tooltip.sass  main.css  main.css.map  main.sass
vedas-ui/: Cargo.toml
vedas-ui/src/: constants.rs  helper.rs  lib.rs  styles.rs  utils.rs
vedas-ui/src/components/: button.rs  card.rs  mod.rs  modal.rs  slider.rs  spinner.rs  text.rs  toast.rs  toggle.rs  tooltip.rs
vedas-ui/src/components/accordion/: accordion.rs  accordion_item.rs  mod.rs
vedas-ui/src/components/button/: button.rs  button_group.rs  button_type.rs  mod.rs  shape.rs  style.rs  target.rs
vedas-ui/src/components/carousel/: carousel_container.rs  carousel_controls.rs  carousel_dot.rs  carousel_image.rs
vedas-ui/src/components/dropdown/: dropdown_container.rs  dropdown_item.rs
vedas-ui/src/components/forms/: form_component.rs  form_group.rs  form_input.rs  form_label.rs  form_select.rs  form_textarea.rs
vedas-ui/src/components/layouts/: container.rs  item.rs
vedas-ui/src/components/navbar/: navbar_component.rs  navbar_container.rs  navbar_item.rs
vedas-ui/src/components/navbar/navbar_dropdown/: navbar_dropdown_container.rs  navbar_dropdown_item.rs
vedas-ui/src/components/tabs/: mod.rs  tabs.rs
vedas-ui/src/components/typography/: base.rs  editable.rs  level.rs  line_style.rs  link.rs  mod.rs  paragraph.rs  text.rs  text_style.rs  title.rs  typography.rs  weight.rs
vedas-ui/src/utils/: color.rs  mod.rs  size.rs  target.rs  trans_button.rs  wave.rs
vedas-utils/: Cargo.toml
vedas-xml/: Cargo.toml
vedas-xml/src/: main.rs  parser.rs
vedas-xml/src/parser/: config.rs  convert.rs  view.rs  xml.rs
