[package]
name = "examples"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
vedas_core = {path = "../vedas-core"}
treexml = "0.7.0"
iced = "0.2.0"

[[example]]
name = "todo"
path = "todo.rs"

[[example]]
name = "counter"
path = "counter.rs"

[[example]]
name = "select_list"
path = "select_list.rs"