[package]
name = "vedas_ui"
version = "0.1.0"
authors = ["veasnama <maveasnatech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
full = [
    "layouts",
    "button",
    "navbar",
    "forms",
    "card",
    "modal",
    "text",
    "dropdown",
    "spinner",
    "carousel"
]
layouts = ["rand"]
button = []
navbar = ["layouts"]
forms = []
card = ["layouts"]
modal = []
text = []
dropdown = []
spinner = []
carousel = []

[dependencies]
wasm-bindgen = "0.2"
yew = { version="0.17", features = ["web_sys"] }
yewtil = "0.3"
web-sys = {version = "0.3", features = ["HtmlDocument", "HtmlCollection", "CssStyleDeclaration", "Selection", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "Event", "Node","HtmlOptionsCollection","HtmlOptionElement", "DataTransfer"]}
rand = { version = "0.8.3", optional = true }
yew_assets= {version = "0.1", features = ["full"]}
wasm-bindgen-test = "0.3"