[package]
name = "vedas_ui"
version = "0.1.0"
authors = ["veasnama <maveasnatech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
full = [
    "layouts",
    "button",
    "navbar",
    "forms",
    "card",
    "modal",
    "text",
    "dropdown",
    "spinner",
    "carousel",
    "typography",
    "icon"
]
layouts = ["rand"]
button = []
navbar = ["layouts", "icon"]
forms = []
card = ["layouts"]
modal = ["layouts"]
text = ["icon"]
dropdown = []
spinner = []
carousel = ["icon"]
typography = ["clipboard", "regex", "icon"]
icon  = ["yew_assets"]

[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.17", features = ["web_sys"] }
yewtil = "0.3"
yew_assets = { version = "0.1", features = ["full"], optional = true }
web-sys = {version = "0.3", features = ["HtmlDocument", "HtmlCollection", "CssStyleDeclaration", "Selection", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "Event", "Node","HtmlOptionsCollection","HtmlOptionElement", "DataTransfer"]}
rand = { version = "0.8.3", optional = true }
wasm-bindgen-test = "0.3"
clipboard = { version = "0.5.0", optional = true } 
regex = { version = "1.5", optional = true }