[package]
name = "vedas-ui-demo"
version = "0.1.0"
authors = ["veasnama <maveasnatech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vedas_ui = {path = "../../vedas-ui", features=["full"]}
yew = { version="0.17", features = ["web_sys"]}
yew-router = {version="0.14", features = ["web_sys"] }
web-sys = "0.3"
wasm-bindgen = "*"
yew_prism = "*"